--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   port: 8080
 
 debug: false
+
 ################### Mybatis config ###################
 mybatis:
   mapper-locations: classpath:mapping/*Mapper.xml
@@ -14,7 +15,7 @@ spring:
   ################### Datasource config ###################
   datasource:
     username: root
-    password: root
+    password: ENC(h0FuKCIDDxtJDagwvCWZPg==)
     url: jdbc:mysql://127.0.0.1:3306/cas?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
 
@@ -27,7 +28,7 @@ spring:
     host: 120.76.175.67
     port: 6379
     database: 0
-    #    password: he970628
+    #    password: ENC(rif+QPIsBzSVxyXJWRoCohI5cQpZE+a9)
     timeout: 1000
     jedis:
       pool:
@@ -72,7 +73,7 @@ spring:
     host: 120.76.175.67
     port: 5672
     username: guest
-    password: guest
+    password: ENC(uLi03Ellq+ON+mXDJajfcQ====)
     virtualHost: /
   ################# Spring Data config begin #################
   data:
@@ -80,7 +81,7 @@ spring:
     mongodb:
       host: 120.76.175.67
       port: 27017
-      password: he970628
+      password: ENC(rif+QPIsBzSVxyXJWRoCohI5cQpZE+a9)
       username: admin
       database: admin
       uri: mongodb://${spring.data.mongodb.username}:${spring.data.mongodb.password}@${spring.data.mongodb.host}:${spring.data.mongodb.port}/${spring.data.mongodb.database}?maxpoolsize=10&minpoolsize=1&maxidletimems=600000&maxlifetimems=1800000
@@ -89,7 +90,13 @@ spring:
     neo4j:
       uri: bolt://120.76.175.67:7687
       username: neo4j
-      password: neo4j
+      password: ENC(SHhLyWedBBnzXLj/1bfUyQ==)
   ################# Spring Data config end #################
 
 ################### Spring config end ###################
+jasypt:
+  encryptor:
+    password: jasypt
+    # 加密算法设置 3.0.0 以后
+    algorithm: PBEWithMD5AndDES
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
