--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,30 @@
         <fastjson.version>1.2.62</fastjson.version>
         <jasypt-boot.version>3.0.1</jasypt-boot.version>
         <druid-boot.version>1.2.5</druid-boot.version>
+        <netty-all.version>4.1.58.Final</netty-all.version>
+        <commons-io.version>2.8.0</commons-io.version>
+        <tomcat-embed-core.version>9.0.44</tomcat-embed-core.version>
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>${tomcat-embed-core.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty-all.version}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
