--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -121,19 +121,26 @@ spring:
     # 设置迁移时的编码，默认UTF-8.
     encoding: UTF-8
     # 迁移脚本的位置，默认db/migration.
-    locations: db/migration
+    locations:
+      - classpath:db/migration
     # 是否允许无序的迁移，默认false.
     out-of-order: false
     # 设置每个placeholder的前缀，默认${.
     placeholder-prefix: ${
     # 设置每个placeholder的后缀，默认}.
     placeholder-suffix: "}"
+    # 可重复迁移文件前缀。默认R
+    repeatableSqlMigrationPrefix: R
     # 迁移文件的前缀，默认为V.
     sql-migration-prefix: V
     # 迁移脚本的文件名分隔符，默认__
     sql-migration-separator: __
+    # 迁移脚本的文件名后缀
+    sqlMigrationSuffixes:
+      - .sql
     # 设定需要flywary迁移的schema，大小写敏感，默认为连接默认的schema.
-    schemas: flyway
+    schemas:
+      - flyway
     # 迁移时使用的目标版本，默认为latest version
     #    target: latest version
     # 迁移时使用的JDBC URL，如果没有指定的话，将使用配置的主数据源
