--- a/force-algorithm/pom.xml
+++ b/force-algorithm/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.quan</groupId>
             <artifactId>force-common</artifactId>
-            <version>${common.version}</version>
+            <version>${parent.version}</version>
         </dependency>
 
     </dependencies>
