--- a/force-algorithm/pom.xml
+++ b/force-algorithm/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>spring-water</artifactId>
+        <artifactId>force-to-live</artifactId>
         <groupId>com.quan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
