--- a/force-common/pom.xml
+++ b/force-common/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>spring-water</artifactId>
+        <artifactId>force-to-live</artifactId>
         <groupId>com.quan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
