--- a/force-demo/pom.xml
+++ b/force-demo/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-water</artifactId>
+        <artifactId>force-to-live</artifactId>
         <groupId>com.quan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -16,7 +16,6 @@
         <java.version>1.8</java.version>
         <mybatis-boot.version>2.1.4</mybatis-boot.version>
         <druid-boot.version>1.2.5</druid-boot.version>
-        <common.version>0.0.1-SNAPSHOT</common.version>
     </properties>
     <dependencies>
         <dependency>
