--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.quan</groupId>
-    <artifactId>spring-water</artifactId>
+    <artifactId>force-to-live</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
