--- a/force-common/pom.xml
+++ b/force-common/pom.xml
@@ -17,9 +17,15 @@
         <java.version>1.8</java.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <jasypt-boot.version>3.0.1</jasypt-boot.version>
+        <hutool.version>5.6.3</hutool.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
