添加redisson配置优化

--- a/force-demo/pom.xml
+++ b/force-demo/pom.xml
@@ -25,6 +25,11 @@
             <version>${parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis-boot.version}</version>
