--- a/force-framework/pom.xml
+++ b/force-framework/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <java.version>1.8</java.version>
         <es.version>7.4.2</es.version>
+        <shardingsphere-boot.version>4.1.1</shardingsphere-boot.version>
     </properties>
     <dependencies>
         <dependency>
@@ -21,15 +22,22 @@
             <artifactId>force-common</artifactId>
             <version>${parent.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
-<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.apache.shardingsphere/sharding-jdbc-spring-boot-starter -->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+            <version>${shardingsphere-boot.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-high-level-client -->
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>${es.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
     </dependencies>
