--- a/force-demo/pom.xml
+++ b/force-demo/pom.xml
@@ -20,6 +20,10 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.quan</groupId>
             <artifactId>force-common</artifactId>
             <version>${parent.version}</version>
