--- a/force-common/pom.xml
+++ b/force-common/pom.xml
@@ -14,6 +14,7 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
+        <java.version>1.8</java.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <hutool.version>5.6.3</hutool.version>
     </properties>
