--- a/force-framework-demo/force-elasticsearch/pom.xml
+++ b/force-framework-demo/force-elasticsearch/pom.xml
@@ -3,29 +3,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>force-to-live</artifactId>
+        <artifactId>force-framework-demo</artifactId>
         <groupId>com.quan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <modules>
-        <module>force-sharding</module>
-    </modules>
-
-    <artifactId>force-framework-demo</artifactId>
-    <name>force-framework-demo</name>
-    <description>框架代码演示模块的内容放入此工程中</description>
-    <packaging>pom</packaging>
+    <artifactId>force-elasticsearch</artifactId>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <es.version>7.4.2</es.version>
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-high-level-client -->
         <dependency>
-            <groupId>com.quan</groupId>
-            <artifactId>force-common</artifactId>
-            <version>${version}</version>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>${es.version}</version>
         </dependency>
     </dependencies>
 
