--- a/force-framework-demo/force-sharding/pom.xml
+++ b/force-framework-demo/force-sharding/pom.xml
@@ -15,8 +15,18 @@
     <properties>
         <java.version>1.8</java.version>
         <shardingsphere-boot.version>5.0.0-alpha</shardingsphere-boot.version>
+        <druid-boot.version>1.2.5</druid-boot.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.shardingsphere</groupId>
             <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
