--- a/force-framework-demo/pom.xml
+++ b/force-framework-demo/pom.xml
@@ -24,6 +24,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.quan</groupId>
             <artifactId>force-common</artifactId>
             <version>${version}</version>
