--- a/force-common/pom.xml
+++ b/force-common/pom.xml
@@ -17,6 +17,7 @@
         <java.version>1.8</java.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <hutool.version>5.6.3</hutool.version>
+        <jackson.version>2.10.5.1</jackson.version>
     </properties>
 
     <dependencies>
@@ -30,6 +31,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 </project>
