--- a/force-framework/pom.xml
+++ b/force-framework/pom.xml
@@ -14,6 +14,7 @@
         <module>force-mongo</module>
         <module>force-redis</module>
         <module>force-spring</module>
+        <module>force-document</module>
     </modules>
 
     <artifactId>force-framework</artifactId>
