fix（spring）：aop demo

--- a/force-demo/pom.xml
+++ b/force-demo/pom.xml
@@ -68,6 +68,14 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjdk.jol/jol-core -->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.14</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
