--- a/force-common/pom.xml
+++ b/force-common/pom.xml
@@ -18,6 +18,7 @@
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <hutool.version>5.6.3</hutool.version>
         <jackson.version>2.10.5.1</jackson.version>
+        <slf4j.version>1.7.30</slf4j.version>
     </properties>
 
     <dependencies>
@@ -37,5 +38,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
