--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.quan</groupId>
     <artifactId>force-to-live</artifactId>
-    <version>${project-version}</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -16,7 +16,6 @@
     </modules>
 
     <properties>
-        <project-version>1.0-SNAPSHOT</project-version>
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
