:art: add(mongo): 配置文件添加环境变量加载密钥

--- a/force-framework/force-mongo/src/main/resources/application.yml
+++ b/force-framework/force-mongo/src/main/resources/application.yml
@@ -14,3 +14,4 @@ jasypt:
     # 指定加密方式
     algorithm: PBEWithMD5AndDES
     iv-generator-classname: org.jasypt.iv.NoIvGenerator
+    password: ${JASYPT_ENCRYPTOR_PASSWORD}
