--- a/force-framework/force-amqp/src/main/resources/application.yml
+++ b/force-framework/force-amqp/src/main/resources/application.yml
@@ -1,7 +1,13 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: force-amqp
+  rabbitmq:
+    host: 127.0.0.1
+    username: guest
+    password: he970628
 
 
-server:
-  port: 8080
+
