--- a/force-framework/force-demo/pom.xml
+++ b/force-framework/force-demo/pom.xml
@@ -46,6 +46,11 @@
             <version>${mybatis-boot.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.4.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
