:art: freemarker demo

--- a/force-framework/force-demo/pom.xml
+++ b/force-framework/force-demo/pom.xml
@@ -41,6 +41,11 @@
             <version>1.2.75</version>
         </dependency>
         <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.30</version>
+        </dependency>
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis-boot.version}</version>
