--- a/force-framework/force-demo/pom.xml
+++ b/force-framework/force-demo/pom.xml
@@ -81,6 +81,12 @@
             <version>0.14</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
